# gps_waypoint_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: gps_waypoint_navigation.launch
src/: gps_waypoint.cpp
waypoint_files/: points_outdoor.txt
